fix active product style fix long table names not wrapping

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -155,6 +155,7 @@ h1, h2, h3, h4, h5, h6 {
 	margin-top: 20px;
 	page-break-inside: avoid;
 	page-break-after: avoid;
+	word-wrap: break-word;
 }
 
 h1 {
