--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -107,7 +107,7 @@ body.toc_embeded > div.part {
 .lang_bottom_box {
     background-color: white;
     height: 100%;
-    margin-left: 25% !important;
+    margin-left: 240px !important;
     padding-left: 30px;
     padding-top: 20px;
     position: relative;
@@ -117,7 +117,7 @@ body.toc_embeded > div.part {
 
 body[dir="rtl"] .lang_bottom_box {
     margin-left: 0px !important;
-    margin-right: 25% !important;
+    margin-right: 240px !important;
 }
 
 .lang_bottom_box:after, .product_bottom_box:after {
@@ -207,6 +207,11 @@ body[dir="rtl"] .side_products div.link a.active:after {
     font-size: 1.4em;
     margin-top: 20px;
 }
+
+.bottom_products .title {
+    text-align: center;
+}
+
 .bottom_products .title span {
     background-color: #FFFFFF !important;
     color: #999999 !important;
